[gd_scene load_steps=6 format=3 uid="uid://bs828c5yf3tbh"]

[ext_resource type="Script" path="res://Scenes/FoodHouse/foodHouse.gd" id="1_7o2yf"]
[ext_resource type="Texture2D" uid="uid://q73tqp28txb1" path="res://Sprites/Structure/medievalStructure_19.png" id="2_x24u7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhhuw"]
size = Vector2(52, 61)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lq1r4"]
bg_color = Color(0.352941, 0.160784, 0.054902, 0.188235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu8bp"]
bg_color = Color(0.878431, 0.482353, 0.176471, 1)

[node name="foodHouse" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_7o2yf")

[node name="Resources" type="Sprite2D" parent="."]
texture = ExtResource("2_x24u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_dhhuw")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -21.0
offset_top = -39.0
offset_right = 22.0
offset_bottom = -32.0
theme_override_styles/background = SubResource("StyleBoxFlat_lq1r4")
theme_override_styles/fill = SubResource("StyleBoxFlat_yu8bp")
value = 50.0
allow_greater = true
allow_lesser = true
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
